Fixed user search not trimming arguments.  Fixed system ping being unreadable.

--- a/gemp-lotr/gemp-lotr-async/src/main/web/css/gemp-001/hall.css
+++ b/gemp-lotr/gemp-lotr-async/src/main/web/css/gemp-001/hall.css
@@ -395,6 +395,10 @@ table.tables tr.privateForPlayer {
 	color: #5f5f5f;
 }
 
+.user-mention.systemMessage {
+	color: #FFFFFF;
+}
+
 .warningMessage {
 	color: #ff0000;
 }
